# rust-graphql

./: .env  .env.example  .gitignore  Cargo.toml
src/: db.rs  handlers.rs  main.rs
src/models/: brand.rs  common.rs  mod.rs  todo.rs  user.rs
src/resolvers/: brand.rs  mod.rs  todo.rs  user.rs
src/schema/: brand.rs  mod.rs  todo.rs  user.rs
src/services/: brand.rs
src/utils/: middleware.rs  mod.rs  otp.rs  password.rs
