[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
poem = "1.2.25"
async-graphql = "3.0.20"
async-graphql-poem = "3.0.20"
mongodb="2.1.0"
dotenv = "0.15.0"
futures="0.3.19"
serde="1.0.133"