[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
poem = "1.2.25"
async-graphql = { version= "3.0.38", features=["bson"] }
async-graphql-poem = "3.0.38"
mongodb="2.1.0"
dotenv = "0.15.0"
futures="0.3.19"
serde="1.0.133"
serde_json="1.0.75"
bcrypt = "0.13"
parse_duration = "2.1.1"
jsonwebtoken = "8"
rand = "0.8.4"