[package]
name = "rust-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.8", features = ["full"] }
poem = "1.3.59"
async-graphql = { version = "6.0.11", features = ["bson"] }
async-graphql-poem = "6.0.11"
mongodb = "2.7.1"
dotenv = "0.15.0"
futures = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
bcrypt = "0.13"
parse_duration = "2.1.1"
jsonwebtoken = "8"
rand = "0.8.5"
chrono = "0.4.31"
